<resources>
    <string name="title_mini_apps">Mini Apps</string>

    <string name="mini_apps_title">Mini Apps! 📲</string>
    <string name="mini_apps_subtitle">You can easily get all sorts of app concepts provided here. Watch out! You could find some famous app clones.</string>

    <string name="chords_selected_holder">Fmaj</string>
    <string name="chords_card_holder">D</string>
    <string name="chord_selector_title">Guitar Chord</string>
    <string name="chord_title">When playing <b>%1$s</b> at Guitar, you should play the following at the Guitalele:</string>

    <string name="navigation_title_emoji_1">🙈</string>
    <string name="navigation_title_emoji_2">🙉</string>
    <string name="navigation_title_emoji_3">🙊</string>
    <string name="navigation_title_emoji_deeplink">🔗🤖</string>
    <string name="navigation_title_deeplink">You\'ve arrived to a secret screen!</string>
    <string name="navigation_title_step_1">Hello! What\'s your name?</string>
    <string name="navigation_title_step_2">Nice to meet you, %1$s!</string>
    <string name="navigation_title_step_2_more_info">Tell us something you are passionate about!</string>
    <string name="navigation_title_step_3">Thanks for reaching out %1$s!️</string>
    <string name="navigation_title_step_3_more_info">To know more about us, feel free to contacts us at <b>hola@yellowme.mx!️</b></string>
    <string name="yellow_web_link">hola@yellowme.mx</string>
    <string name="action_next">Next</string>
    <string name="deep_link_widget">Deep Link</string>
    <string name="yellowme_email_address">hola@yellowme.mx</string>
    <string name="yellowme_email_subject">¡Hello!</string>
    <string name="send_us_an_email">Send us an email!</string>

</resources>
